# exitkit

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cedar/: policies.cedar
examples/: continuer_demo.py
src/exitkit/: __init__.py  cedar_loader.py  continuer.py  embed.py
tests/: test_auc.py  test_cedar_loader.py  test_continuer.py
